<resources>
    <string name="app_name">Trashbins</string>
    <string name="title_activity_maps">Map</string>

    <string name="No_internet_connection">"There is no internet connection, please try again later"</string>
    <string name="Cluster_click">"Please zoom-in and click on marker."</string>

    <string name="glass">glass</string>
    <string name="clear_glass">clear_glass</string>
    <string name="metal">metal</string>
    <string name="plastic">plastic</string>
    <string name="paper">paper</string>
    <string name="carton">carton</string>
    <string name="electrical">electrical</string>

    <string name="all_title">All containers</string>
    <string name="glass_title">Containers for glass</string>
    <string name="clear_glass_title">Containers for clear glass</string>
    <string name="metal_title">Containers for metal</string>
    <string name="plastic_title">Containers for plastic</string>
    <string name="paper_title">Containers for paper</string>
    <string name="carton_title">Containers for carton</string>
    <string name="electrical_title">Containers for electrical</string>

    <string name="filter_litter_colour_glass_label">Glass</string>
    <string name="filter_litter_white_glass_label">Clear glass</string>
    <string name="filter_litter_metal_label">Metal</string>
    <string name="filter_litter_plastic_label">Plastic</string>
    <string name="filter_litter_paper_label">Paper</string>
    <string name="filter_litter_carton_label">Carton UHT</string>
    <string name="filter_litter_electrical_label">Electrical</string>
    <string name="filter_litter_all_label">All</string>

    <string name="filter_litter_colour_glass">colour_glass</string>
    <string name="filter_litter_white_glass">white_glass</string>
    <string name="filter_litter_metal">metal</string>
    <string name="filter_litter_plastic">plastic</string>
    <string name="filter_litter_paper">paper</string>
    <string name="filter_litter_carton">carton</string>
    <string name="filter_litter_electrical">electrical</string>
    <string name="filter_litter_all">all</string>

    <string name="filter_litter_key">filter_litter</string>
    <string name="filter_litter_title">Type of trashbin</string>
    <string name="filter_litter_title_dialog">Select type of trashbin:</string>

    <string name="filter">Filter</string>
    <string name="watched">Watched</string>
    <string name="watch_list">Places in watch list:</string>

    <string name="widget_title">Trash bins by type:</string>
    <string name="Action_add_to_watch">This place was added to Watched places</string>
    <string name="Action_delete_from_watch">This place was removed from Watched places</string>

    <string name="add_banner">Add banner.</string>
    <string name="fab_add">Add place to wathed places.</string>
    <string name="fab_delete">Remove place from wathed places.</string>
    <string name="watched_icon">List of places added to watch list.</string>
    <string name="filter_icon">Filter trashbins by its type.</string>

    <string name="underground">underground</string>
    <string name="aboveground">above-ground</string>
    <string name="NA">N/A</string>
    <string name="Xevery">x every </string>


</resources>
